--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>花火</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <canvas id="fireworks"></canvas>
 
-  <!-- スクリプトは body の最後で読み込む -->
+  
   <script src="script.js" defer></script>
 </body>
 </html>
